--- a/_posts/后端/golang/2018-08-07-go语言.md
+++ b/_posts/后端/golang/2018-08-07-go语言.md
@@ -102,3 +102,29 @@ go run main.go -p 80
 
 ## 2.2 swagger语法
 > 参考:https://github.com/swaggo/swag
+
+## 2.3 go mod
+>参考 https://roberto.selbach.ca/intro-to-go-modules/
+
+```
+Usage:
+
+	go mod <command> [arguments]
+
+The commands are:
+
+	download    download modules to local cache
+	edit        edit go.mod from tools or scripts
+	graph       print module requirement graph
+	init        initialize new module in current directory
+	tidy        add missing and remove unused modules
+	vendor      make vendored copy of dependencies
+	verify      verify dependencies have expected content
+	why         explain why packages or modules are needed
+```
+- go mod init oncall
+- go mod vendor
+
+- 如果依赖包更新了，需要go get -u $xx@xxx
+go get -u  github.com/wangbokun/go@master
+然后可以build，会自动更新go.mod
