--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -129,3 +129,16 @@ auth required /lib/security/pam_wheel.so group=test
 sudo vim /etc/ssh/ssh_config
 注释掉   SendEnv LANG LC_*
 ```
+## 2 ssh 登录失败
+
+
+```
+#错误信息
+  unix_chkpwd[7485]: could not obtain user info ()
+  sshd[7483]: fatal: Access denied for user   by PAM account configuration [preauth]
+  #解决方法
+ vim  /etc/pam.d/sshd
+ 
+ #这行后面添加-auth      optional     pam_reauthorize.so prepare 
+ account    sufficient   pam_localuser.so
+```
