--- a/_posts/后端/nginx/2018-07-21-Nginx.md
+++ b/_posts/后端/nginx/2018-07-21-Nginx.md
@@ -6,7 +6,7 @@ category: 后端
 
 # 1 Nginx概述
 ## 1.1 nginx配置
-### 静态文件服务器
+### 1.1.1 静态文件服务器
 
 ```
 server {
@@ -22,6 +22,25 @@ server {
 }
 ```
 
+### 1.1.2 upstream ip_hash
+
+```
+upstream grafana {
+       ip_hash;
+       server 10.10.10.1:3001;
+       server 10.10.10.2:3001;
+}
+
+server {
+        listen 80;
+        server_name monitor.nioint.com;
+
+	location / {
+	   #grafana 对应上面的upstream name
+		proxy_pass http://grafana/;
+	}
+}
+```
 ## 1.2 URL转发
 
 
