--- a/_posts/后端/golang/2018-08-07-go语言.md
+++ b/_posts/后端/golang/2018-08-07-go语言.md
@@ -128,3 +128,21 @@ The commands are:
 - 如果依赖包更新了，需要go get -u $xx@xxx
 go get -u  github.com/wangbokun/go@master
 然后可以build，会自动更新go.mod
+
+# 3 基础语法
+## 3.1 变量
+## 3.2 类型
+## 3.3 流程、条件
+### 3.3.1 select
+## 3.4 函数
+## 3.5 错误处理
+### 3.5.1 defer
+
+## 3.6 初始化
+## 3.7 匿名组合
+## 3.8 反射
+## 3.9 指针
+# 4 接口
+# 5 并发
+# 6 网络
+# 7 安全 
