--- a/_posts/后端/golang/2018-08-07-go语言.md
+++ b/_posts/后端/golang/2018-08-07-go语言.md
@@ -16,7 +16,8 @@ category: 后端
 ```
 export GOPROXY=https://goproxy.io
 or
-https://github.com/gpmgo/gopm
+go get -u github.com/gpmgo/gopm
+gopm get xxx
 ```
 
 # 2 工具
