--- a/_posts/大数据/2018-12-18-hive.md
+++ b/_posts/大数据/2018-12-18-hive.md
@@ -13,20 +13,20 @@ category: 大数据
 # 3 hive-site.xml 配置
 
 # 4 hive command
-## 4.1.1 Hive Cli
-### 4.1.1.1 hive执行dfs命令
+## 4.1 Hive Cli
+### 4.1.1 hive执行dfs命令
 ```
 hive> dfs -ls /;
   /tmp/xx
   
 ```
-### 4.1.1.2 hive Cli "一次性" 使用
+### 4.1.2 hive Cli "一次性" 使用
 
 ```
 hive -S -e "select * from table  limit 3"
 # -S 静态模式
 ```
-### 4.1.1.3 hive 从文件中执行hive查询
+### 4.1.3 hive 从文件中执行hive查询
 
 ```
 方法一:
@@ -38,13 +38,13 @@ select * from $table;
 方法二：
 hive> source  /tmp/demo.hql;
 ```
-### 4.1.1.3 hive hiverc文件
+### 4.1.3 hive hiverc文件
 - 对于频繁初始化操作的命令，可以写到 $HOME/.hiverc 中， 当执行hive命令时，会自动执行此文件中的内容.
 
-### 4.1.1.4 hive Cli 历史命令
+### 4.1.4 hive Cli 历史命令
 - 记录文件 $HOME/.hivehistory
 
-### 4.1.1.5 hive  执行shell命令
+### 4.1.5 hive  执行shell命令
 
 ```
 # -- 是注释符
@@ -54,7 +54,55 @@ hello
 hive> !pwd;
 /data/bokun.wang
 ```
+## 4.2 Hive Create Table
+### 4.2.1 Create cvs table
 
+```
+#需要引入SERDE指定数据格式为csv，默认逗号分隔，可以指定其他分隔符
+CREATE TABLE alert_info (
+    status string,
+    environment string,
+    ...
+    nowTime string,
+    day string
+    )
+
+partitioned by (
+    day string)
+ROW FORMAT SERDE 'org.apache.hadoop.hive.serde2.OpenCSVSerde'
+
+LOCATION '/$hdfs目录/xx/xx';
+```
+### 4.2.2 create json table
+
+```
+#SERDE指定json数据格式，默认不支持json格式，参照 7.1 引入json jar
+CREATE TABLE alert_info (
+    status string,
+    level string,
+    ...
+    startsAt string
+    )
+
+partitioned by (
+    daily string)
+
+ROW FORMAT SERDE 'org.openx.data.jsonserde.JsonSerDe'
+
+STORED AS TEXTFILE
+
+LOCATION '/$hdfs目录/xx/xx';
+
+```
+## 4.3 Create partition
+
+```
+#create partition，xx.hql
+USE ${DB_NAME};
+
+ALTER TABLE ${TABLE_NAME}  ADD IF NOT EXISTS PARTITION (daily='${Day}') LOCATION '${Path}'
+
+```
 # 5 权限管理
 
 # 6 Kerberos
