--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -118,6 +118,19 @@ usermod -G wheel 用户名
 vim /etc/pam.d/su
 auth required /lib/security/pam_wheel.so group=test
 ```
+# 4 Git
+## 4.1 git 配置部署的秘钥对
+
+```
+ssh-keygen -f test   -C "test"
+cat .ssh/config
+Host xxx.com
+  HostName xx.com
+  Port 22x
+  User git
+  IdentityFile ~/.ssh/test
+```
+
 # Q&&A
 ## 1 mac升级后编码错误
 
