--- a/_posts/后端/micro/2019-08-16-micro.md
+++ b/_posts/后端/micro/2019-08-16-micro.md
@@ -8,11 +8,54 @@ category: 后端
 
 
 ```
-export GOPROXY=https://goproxy.io
-go get -u -v github.com/micro/micro
-
-#
-git clone https://github.com/grpc/grpc-go.git
-mdkir $GO_PATH/google.golang.org
-mv grpc-go $GO_PATH/google.golang.org/
+ #command 
+ gopm  get -v  github.com/micro/micro
+ go build -o micro main.go
+ 
+ cp micro $GOPATH/bin
+ micro 
+brew install protobuf
+go get -u github.com/golang/protobuf/{proto,protoc-gen-go}
+go get -u github.com/micro/protoc-gen-micro
+ 
+ 
+ #docker
+ docker pull microhq/micro
+ docker run -p 8080:8080  -e MICRO_REGISTRY=mdns microhq/micro api --handler=rpc --address=:8080 --namespace=shippy
 ```
+
+
+# 3 Example Usage
+
+```
+./micro cli
+```
+
+![-w515](/assets/img//15669969003536.jpg)
+
+## 3.1 list service 
+
+```
+./micro list services
+go.micro.api
+```
+# 3.2  Get Service
+
+```
+./micro get  service go.micro.api
+```
+![-w1073](/assets/img//15669966815350.jpg)
+
+# 3.3 call Service
+
+```
+micro call go.micro.srv.example Example.Call '{"name": "John"}'
+```
+
+# 3.4 Service Health
+
+```
+./micro health go.micro.api
+```
+
+![-w661](/assets/img//15669968084423.jpg)
