--- a/_posts/后端/nginx/2018-07-21-Nginx.md
+++ b/_posts/后端/nginx/2018-07-21-Nginx.md
@@ -188,6 +188,70 @@ server {
 	     rewrite  ^/(.*)$  http://bbb.com/$1 permanent;
 }
 ```
+## 2.6 https配置
+
+```
+#https + 负载均衡
+server {
+        listen 80;
+        server_name test.com;
+        location / {
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-Ip $remote_addr;
+                proxy_set_header X-Forwarded-For $remote_addr;
+                proxy_pass https://test;
+        }
+
+         location  ~ ^/ui {
+                 rewrite ^(.*)$ /gateway/prod/test$1 ;
+        }
+        location  ~ ^/v1 {
+                 rewrite ^(.*)$ /gateway/prod/test$1 ;
+        }
+}
+server {
+        listen 443;
+        server_name test.com;
+        ssl on;
+        ssl_certificate /etc/nginx/ssl/cert/test.com.crt;
+        ssl_certificate_key /etc/nginx/ssl/cert/test.com.key;
+        ssl_session_timeout 5m;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #按照这个协议配置
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;#按照这个套件配置
+        ssl_prefer_server_ciphers on;
+
+        location / {
+
+                proxy_pass https://test;
+                proxy_redirect off;
+                proxy_set_header        Host    $host;
+                proxy_set_header        X-Real-IP       $remote_addr;
+                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+                proxy_max_temp_file_size 0;
+                proxy_connect_timeout 90;
+                proxy_send_timeout 90;
+                proxy_read_timeout 90;
+                proxy_buffer_size 4k;
+                proxy_buffers 4 32k;
+                proxy_busy_buffers_size 64k;
+                proxy_temp_file_write_size 64k;
+        }
+        location  ~ ^/ui {
+                 rewrite ^(.*)$ /gateway/prod/test$1 ;
+        }
+        location  ~ ^/v1 {
+                 rewrite ^(.*)$ /gateway/prod/test$1 ;
+        }
+}
+
+
+upstream test{
+        server 10.10.10.1:8444;
+        server 10.10.10.2:8444;
+        server 10.10.10.3:8444;
+}
+```
 
 # 2 https 免费证书
 ## 2.1 下载 certbot 
@@ -245,7 +309,7 @@ server {
     return 301 https://$server_name$request_uri;
 }
 ```
-## 2.7 
+## 2.7 证书更新
 
 ```
  ./certbot-auto certonly --webroot --agree-tos -v -t --email 411241127@qq.com -w /data/project/xianguo/ -d  9u92.com
