--- a/_posts/后端/golang/2018-08-07-go语言.md
+++ b/_posts/后端/golang/2018-08-07-go语言.md
@@ -19,7 +19,38 @@ or
 go get -u github.com/gpmgo/gopm
 gopm get xxx
 ```
+# 1.2 grpc
 
+```
+git clone https://github.com/grpc/grpc-go.git $GOPATH/src/google.golang.org/grpc
+git clone https://github.com/golang/net.git $GOPATH/src/golang.org/x/net
+git clone https://github.com/golang/text.git $GOPATH/src/golang.org/x/text
+go get -u github.com/golang/protobuf/{proto,protoc-gen-go}
+git clone https://github.com/google/go-genproto.git $GOPATH/src/google.golang.org/genproto
+
+
+cd $GOPATH/src/
+go install google.golang.org/grpc
+```
+
+# 1.3 安装 golang.org/x/*
+
+```
+#!/bin/bash
+MODULES="crypto net oauth2 sys text tools"
+for module in ${MODULES}
+do
+    wget https://github.com/golang/${module}/archive/master.tar.gz -O ${GOPATH}/src/golang.org/x/${module}.tar.gz
+    cd ${GOPATH}/src/golang.org/x && tar zxvf ${module}.tar.gz && mv ${module}-master/ ${module}
+done
+```
+
+# 1.4 安装 google.golang.org/genproto
+
+```
+wget https://github.com/google/go-genproto/archive/master.tar.gz -O ${GOPATH}/src/google.golang.org/genproto.tar.gz
+cd ${GOPATH}/src/google.golang.org && tar zxvf genproto.tar.gz && mv go-genproto-master genproto
+```
 # 2 工具
 ## 2.1 go swagger
 >editor swagger: http://editor.swagger.io/
