--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -89,10 +89,10 @@ auth       sufficient   pam_succeed_if.so use_uid user = user1
 #需求描述，同一台机器两组用户group1和group2， group1的用户可以su group1组，group2的用户可以su group2，配置如下:
 
 auth		sufficient	pam_rootok.so
-auth       [success=ignore default=2] pam_succeed_if.so user = swc.sas.nsc
+auth       [success=ignore default=2] pam_succeed_if.so user = xxx
 auth       [success=ignore default=1]   pam_succeed_if.so  use_uid user ingroup $group1
 auth       [success=done default=ignore]  pam_permit.so
-auth       [success=ignore default=2]     pam_succeed_if.so user = swc.sas
+auth       [success=ignore default=2]     pam_succeed_if.so user = xxx
 auth       [success=ignore default=1]     pam_succeed_if.so use_uid user ingroup $group2
 auth       [success=done default=ignore]  pam_permit.so
 ```
