--- a/_posts/后端/nginx/2018-07-21-Nginx.md
+++ b/_posts/后端/nginx/2018-07-21-Nginx.md
@@ -33,7 +33,7 @@ upstream grafana {
 
 server {
         listen 80;
-        server_name monitor.nioint.com;
+        server_name xxx.com;
 
 	location / {
 	   #grafana 对应上面的upstream name
