--- a/_posts/大数据/2018-12-13-flume.md
+++ b/_posts/大数据/2018-12-13-flume.md
@@ -40,7 +40,7 @@ agent-se-prometheus-alertinfo-prod.channels.channel1.transactionCapacity = 100
 
 # sinks  to kafka configuration
 agent-se-prometheus-alertinfo-prod.sinks.sink1.type = org.apache.flume.sink.kafka.KafkaSink
-agent-se-prometheus-alertinfo-prod.sinks.sink1.kafka.topic = swc-se-prometheus-alertinfo
+agent-se-prometheus-alertinfo-prod.sinks.sink1.kafka.topic = prometheus-alertinfo
 agent-se-prometheus-alertinfo-prod.sinks.sink1.kafka.bootstrap.servers = kafka01:9092,kafka02:9092,kafka03:9092
 agent-se-prometheus-alertinfo-prod.sinks.sink1.kafka.flumeBatchSize = 100
 agent-se-prometheus-alertinfo-prod.sinks.sink1.kafka.producer.acks = 1
@@ -57,7 +57,7 @@ agent-se-prometheus-alertinfo-prod.sinks.sink1.kafka.producer.sasl.mechanism = P
 
 export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64/
 
-export JAVA_OPTS="$JAVA_OPTS -Xms100m -Xmx2000m -Djava.security.auth.login.config=/data/services/se-prometheus-alertinfo-prod/apache-flume-1.8.0-bin/conf/flume_jass.conf -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6001 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+export JAVA_OPTS="$JAVA_OPTS -Xms100m -Xmx2000m -Djava.security.auth.login.config=/data/services/prometheus-alertinfo-prod/apache-flume-1.8.0-bin/conf/flume_jass.conf -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6001 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
 
 ```
 
