--- a/_posts/大数据/2019-03-20-oozie.md
+++ b/_posts/大数据/2019-03-20-oozie.md
@@ -17,13 +17,13 @@ category: 大数据
 	sharelibDirNew = hdfs://cdh/user/oozie/share/lib/lib_20190320212412
 	status = Successful
 ``` 
-![](/assets/img//15530905794817.jpg)
 
+![](/assets/img//15679985200930.jpg)
 
 ```
 oozie admin -oozie http://xxxx:11000/oozie -shareliblist
 
-[@ bokun.wang]$ oozie admin -oozie http://t-awsbj-sqe-cdh-nn-001.mynextev.net:11000/oozie -shareliblist
+[@ bokun.wang]$ oozie admin -oozie http://xxxx:11000/oozie -shareliblist
 [Available ShareLib]
 hive
 spark2
