--- a/_posts/ai/2019-09-09-md-数学公式.md
+++ b/_posts/ai/2019-09-09-md-数学公式.md
@@ -12,14 +12,14 @@ category: ai
  $ 数学公式 $
 ```
 【示例】
-1 $$x = 100 * y + z - 10 / 33 + 10 % 3$$
+1 $x = 100 * y + z - 10 / 33 + 10 % 3$
 
 - 独立的行使用公式
 ```
  $$ 数学公式 $$
 ```
 【示例】
-2 $x = 100 * y + z - 10 / 33 + 10 % 3$
+2   $$x = 100 * y + z - 10 / 33 + 10 % 3$$
 
 ## 1.2 上下标
 
@@ -28,13 +28,13 @@ category: ai
 - 上标
 
 ```
-$a^2$
+$$a^2$$
 ```
-【示例】 $a^2$
+【示例】    $$a^2$$
 - 下标
 
 ```
-$a_{1}$
+$$a_{1}$$
 ```
 
 【示例】$$a_{1}$$
@@ -51,7 +51,7 @@ $$\sideset{^1_2}{^3_4}A$$
 \lbrace \rbrace
 ```
 
-【示例】$\lbrace \rbrace$
+【示例】$$\lbrace \rbrace$$
 【综合示例】$$f(x, y) = 100 * \lbrace[(x + y) * 3] - 5\rbrace$$
 
 ## 1.4 分数
@@ -69,7 +69,7 @@ $$\frac{1}{3} 与 \cfrac{1}{3}$$
 ```
 底线省略号 $\ldots$  中线省略号 $\cdots$
 ```
-$\ldots$ $\cdots$
+$$\ldots  \cdots$$
 
 ## 1.6 矢量
 使用 \vec{矢量} 来自动产生一个矢量。也可以使用 \overrightarrow 等命令自定义字母上方的符号。
