add google adsense

--- a/_posts/后端/广告/2019-09-10-广告.md
+++ b/_posts/后端/广告/2019-09-10-广告.md
@@ -13,6 +13,7 @@ category: 后端
 
 
 ```
+#放置在 <head> 和 </head> 标记之间
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
@@ -21,3 +22,13 @@ category: 后端
   });
 </script>
 ```
+## 2.3 google 审核
+![](/assets/img//15681071909301.jpg)
+
+![](/assets/img//15681072415682.jpg)
+
+![](/assets/img//15681072836653.jpg)
+
+## 2.4 审核通过
+
+## 2.5 配置广告
