--- a/_posts/后端/广告/2019-09-10-广告-推广.md
+++ b/_posts/后端/广告/2019-09-10-广告-推广.md
@@ -32,3 +32,23 @@ category: 后端
 ## 2.4 审核通过
 
 ## 2.5 配置广告
+
+# 3 google搜索seo
+- https://search.google.com/search-console/about?hl=zh-CN&utm_source=wmx&utm_medium=wmx-welcome
+
+![](/assets/img//15681702121212.jpg)
+
+![](/assets/img//15681702325426.jpg)
+![](/assets/img//15681702665525.jpg)
+![](/assets/img//15681703295125.jpg)
+
+![-w653](/assets/img//15681707561834.jpg)
+![-w1142](/assets/img//15681707800011.jpg)
+![](/assets/img//15681709037523.jpg)
+![](/assets/img//15681709305211.jpg)
+
+![](/assets/img//15681712834340.jpg)
+
+![](/assets/img//15681710926705.jpg)
+
+![](/assets/img//15681713422704.jpg)
