--- a/_posts/后端/广告/2019-09-10-广告-推广.md
+++ b/_posts/后端/广告/2019-09-10-广告-推广.md
@@ -29,9 +29,19 @@ category: 后端
 
 ![](/assets/img//15681072836653.jpg)
 
-## 2.4 审核通过
 
+
+## 2.4 审核通过
+![-w945](/assets/img//15687007679456.jpg)
 ## 2.5 配置广告
+![-w1276](/assets/img//15687008293233.jpg)
+
+![-w1290](/assets/img//15687008869703.jpg)
+
+![-w1195](/assets/img//15687008989503.jpg)
+
+![-w1072](/assets/img//15687010644176.jpg)
+
 
 # 3 google搜索seo
 - https://search.google.com/search-console/about?hl=zh-CN&utm_source=wmx&utm_medium=wmx-welcome
@@ -39,12 +49,17 @@ category: 后端
 ![](/assets/img//15681702121212.jpg)
 
 ![](/assets/img//15681702325426.jpg)
+
 ![](/assets/img//15681702665525.jpg)
+
 ![](/assets/img//15681703295125.jpg)
 
 ![-w653](/assets/img//15681707561834.jpg)
+
 ![-w1142](/assets/img//15681707800011.jpg)
+
 ![](/assets/img//15681709037523.jpg)
+
 ![](/assets/img//15681709305211.jpg)
 
 ![](/assets/img//15681712834340.jpg)
