--- a/_posts/大数据/2019-09-03-HDFS.md
+++ b/_posts/大数据/2019-09-03-HDFS.md
@@ -72,3 +72,7 @@ true
 hdfs diskbalancer -plan xx.dn.001.xx.com
 #参考https://www.iteblog.com/archives/1905.html， 等重启完集群后，在做验证
 ```
+操作前:
+![](/assets/img//15749992494148.jpg)
+
+操作后:
