--- a/_posts/大数据/2018-11-28-zeppelin.md
+++ b/_posts/大数据/2018-11-28-zeppelin.md
@@ -53,6 +53,7 @@ print("%html", animation.to_jshtml())
 
 
 # Q&&A
+##  ModuleNotFoundError: No module named 'numpy'
 
 ```
 ---------------------------------------------------------------------------
@@ -70,3 +71,26 @@ PYSPARK_PYTHON	/usr/local/python3/bin/python3
 zeppelin.pyspark.python	/usr/local/python3/bin/python3
 ```
 ![](/assets/img//15433931493943.jpg)
+
+## java.lang.OutOfMemoryError: unable to create new native thread
+
+```
+ulimit -u
+4096
+pstree -p 61223|wc -l
+3973
+
+#修改配置
+vim /etc/security/limits.d/zeppline.conf
+zeppelin    soft  nofile  257589
+zeppelin    soft  nproc   257589
+zeppelin    hard  nofile  1048576
+zeppelin    hard  nproc   unlimited
+zeppelin    hard  memlock unlimited
+
+#不重启服务器生效
+sysctl -p
+#查看执行结果
+ulimit -u
+257589
+```
