--- a/_posts/大数据/2019-01-07-druid.md
+++ b/_posts/大数据/2019-01-07-druid.md
@@ -10,3 +10,23 @@ category: 大数据
 ![](/assets/img/15321585145332.jpg)
 
 
+# 2
+# 3 Druid Kerberos
+
+```
+grep -v ^# common.runtime.properties
+
+
+druid.extensions.loadList=["druid-kafka-eight", "druid-s3-extensions", "druid-histogram", "druid-datasketches", "druid-lookups-cached-global", "mysql-metadata-storage","druid-hdfs-storage"]
+
+druid_storage_type=hdfs
+druid_storage_storageDirectory=hdfs://cdh/tmp/druid/storage
+druid.hadoop.security.kerberos.principal=druid@xxx.com
+druid.hadoop.security.kerberos.keytab=/data/src/druid/conf/druid.keytab
+
+
+将hadoop的xml配置文件拷贝到以下目录:
+/data/src/druid/conf/druid/_common/
+core-site.xml hdfs-site.xml mapred-site.xml yarn-site.xml
+
+```
