--- a/_posts/后端/golang/2018-08-07-go语言.md
+++ b/_posts/后端/golang/2018-08-07-go语言.md
@@ -128,7 +128,19 @@ func main() {
 ![](/assets/img//15628976402197.jpg)
 
 ```
-go run main.go -p 80
+#选执行这个命令生成json文件
+$swag init
+2019/12/11 17:50:33 Generate swagger docs....
+2019/12/11 17:50:33 Generate general API Info, search dir:./
+2019/12/11 17:50:33 create docs.go at  docs/docs.go
+2019/12/11 17:50:33 create swagger.json at  docs/swagger.json
+2019/12/11 17:50:33 create swagger.yaml at  docs/swagger.yaml
+
+$go run main.go -p 80
+#打开网页
+http://127.0.0.1/help/index.html
+手动输入
+http://127.0.0.1/docs/swagger.json
 ```
 ![](/assets/img//15628976830250.jpg)
 
