--- a/_posts/大数据/2019-09-03-HDFS.md
+++ b/_posts/大数据/2019-09-03-HDFS.md
@@ -71,7 +71,7 @@ BlockPool
 
 ## 4.2 node balancer
 ## 4.3 disk balancer
- - 配置修改. hdfs->configuration->filters(scope->hdfs(service-wide))->Cluster-wide Advanced Configuration Snippet (Safety Valve) for core-site.xml 
+ - 配置修改. hdfs->configuration->filters(scope->hdfs(service-wide))->Cluster-wide Advanced Configuration Snippet (Safety Valve) for hdfs-site.xml 
  
 ```
 dfs.disk.balancer.enabled
