--- a/_posts/大数据/2019-09-03-HDFS.md
+++ b/_posts/大数据/2019-09-03-HDFS.md
@@ -102,8 +102,11 @@ hdfs diskbalancer -plan xx.dn.001.xx.com
 
 
 ```
-hdfs diskbalancer -execute  /system/diskbalancer/2019-十一月-29-17-58-57/xxx-cdh-dn-001.com.plan.json
+#执行
+hdfs diskbalancer -execute  /system/diskbalancer/2019-十一月-29-17-58-57/xxx-cdh-dn-001.com.plan.json  -thresholdPercentage 5
 
+#查询状态
+hdfs diskbalancer -query xxx-cdh-dn-001.com
 19/11/29 18:08:17 INFO command.Command: Executing "query plan" command.
 ```
 操作前:
