--- a/_posts/运维/aws/2018-12-25-aws.md
+++ b/_posts/运维/aws/2018-12-25-aws.md
@@ -75,6 +75,30 @@ aws s3 cp s3://xxx/infoc2.cm.xxx.com/ ./ --recursive --exclude "*" --include "E2
 # 3 EC2
 ## 3.1 ec2
 ## 3.2 Volumes
+- 根分区扩容
+
+```
+在aws控制台增加根分区容量
+
+在机器上安装growpart
+
+yum -y install cloud-utils-growpart
+
+执行如下命令（注意根分区所属数字，一般为3，用df命令确认）
+
+LANG=en_US.UTF-8
+
+4系列ec2
+
+growpart /dev/xvda  3
+
+xfs_growfs /dev/xvda3
+
+5系列ec2
+
+growpart /dev/nvme0n1  3
+xfs_growfs /dev/nvme0n1p3
+```
 ## 3.2 Elb-Alb
 ## 3.3 AMI
 ## 3.4 Reserved Instances（RI预留实例）
