--- a/_posts/物联网/树莓派/2019-03-18-树莓派.md
+++ b/_posts/物联网/树莓派/2019-03-18-树莓派.md
@@ -59,6 +59,45 @@ Password:
 
 ![-w761](/assets/img//15528875907734.jpg)
 
+
+- 以前安装过系统的盘，格式化重新安装系统
+
+
+```
+diskutil unmount /dev/disk3s1
+```
+
+![-w848](/assets/img//15821861339918.jpg)
+
+
+```
+#使用指令dd覆盖磁盘的第一个扇区512个字节
+➜  ~ sudo dd bs=512 count=1 if=/dev/zero of=/dev/rdisk3
+Password:
+1+0 records in
+1+0 records out
+512 bytes transferred in 0.000280 secs (1829202 bytes/sec)
+
+#重新插拔sd卡，会提示报错
+```
+
+![-w427](/assets/img//15821863258007.jpg)
+
+
+
+```
+点击初始化
+```
+
+![-w909](/assets/img//15821864415421.jpg)
+
+
+```
+点击抹掉，就和之前步骤相同
+```
+
+![-w685](//assets/img//15821870449053.jpg)
+
 ## 1.3 usb/以太网方式链接电脑 （mac os）
 ```
 修改两个配置文件
@@ -80,6 +119,15 @@ Username: pi
 Password: raspberry
 ```
 ![](/assets/img//15528959175848.jpg)
+
+![-w675](/assets/img//15821774421805.jpg)
+
+
+![-w669](/assets/img//15821772403415.jpg)
+
+【ERROR 未解决】
+![-w404](/assets/img//15821774178869.jpg)
+
 
 ## 1.4 无屏模式wifi 配置
 
@@ -264,8 +312,49 @@ vncserver
 
 
 ```
+或者链接这个地址:raspberrypi.local:1
 输入用户名密码，便可登录
 ```
+
+![-w589](/assets/img//15821927205429.jpg)
+
+## 1.9 LT猫拨号映射公网
+
+
+```
+#首先说明下国内liantong网络默认是猫拨号->路由器->电脑
+#所以要做两层NAT才可以出去.当然你可以联系客服让做成路由器直接拨号方式.
+
+联通映射出去的地址，不能自访问，所以用手机4G网络来测试结果
+
+#第一层NAT
+登录路由器: http://192.168.0.1
+高级设置->高级用户->虚拟服务器->添加端口映射
+```
+
+![-w1254](/assets/img//15822105001500.jpg)
+
+![-w1179](//assets/img//15822107388183.jpg)
+
+
+```
+#第二层NAT
+上图可以查到猫地址:http://192.168.1.1
+登录网页,用户名密码，在猫设备背面贴纸上.这里就不展示自己找
+```
+
+![-w966](/assets/img//15822109165329.jpg)
+
+
+
+```
+#应用->高级NAT配置->虚拟主机配置
+这里是映射到内网路由器的地址,
+配置完之后，用其他网络来访问测试.成功
+```
+
+![-w928](/assets/img//15822110460885.jpg)
+
 
 # 2 
 ## 2.1 type-c
