--- a/_posts/物联网/树莓派/2019-03-18-树莓派.md
+++ b/_posts/物联网/树莓派/2019-03-18-树莓派.md
@@ -10,7 +10,7 @@ category:  物联网
  ![](/assets/img//15528861014038.jpg)
 ![](/assets/img//15528862107694.jpg)
 
-## 1.2 安装系统
+## 1.2 安装系统-旧版
 
 ```
 #MAC 给sd卡安装系统
@@ -32,8 +32,8 @@ unzeip  raspbian_lite-2018-11-15/2018-11-13-raspbian-stretch-lite.zip
 
 ```
 ➜  df -h
-➜  diskutil unmount /dev/disk2s1
-Volume RASPBIAN on disk2s1 unmounted
+➜  diskutil unmount /dev/disk3s1
+Volume RASPBIAN on disk3s1 unmounted
 ➜ diskutil list
 ```
 
@@ -45,13 +45,13 @@ Volume RASPBIAN on disk2s1 unmounted
 #使用dd命令将系统镜像写入，需要特别特别注意disk后的数字，不能搞错！
 （说明：/dev/disk2s1是分区，/dev/disk2是块设备，/dev/rdisk2是原始字符设备）
 # 用dd写系统到sd卡
-➜  sudo dd bs=4m if=2018-11-13-raspbian-stretch-lite.img of=/dev/rdisk2
+➜  sudo dd bs=4m if=2018-11-13-raspbian-stretch-lite.img of=/dev/rdisk3
 Password:
 445+0 records in
 445+0 records out
 1866465280 bytes transferred in 27.727287 secs (67315106 bytes/sec)
 
-➜ diskutil unmountDisk /dev/disk2
+➜ diskutil unmountDisk /dev/disk3
 ```
 ![](/assets/img//15528874356601.jpg)
 
@@ -98,12 +98,69 @@ Password:
 
 ![-w685](/assets/img//15821870449053.jpg)
 
+## 1.2 安装系统-新版
+
+```
+github上找到一个脚本，刷系统很方便，已测试可用
+wget https://raw.githubusercontent.com/wangbokun/Raspberry-PI-SD-Installer-OS-X/master/install
+
+➜  2020-02-13-raspbian-buster.zip ll
+total 7397384
+-rw-r--r--  1 bokun.wang  FAREAST\Domain Users   3.5G  2 13 16:16 2020-02-13-raspbian-buster.img
+-rwxr-xr-x@ 1 bokun.wang  FAREAST\Domain Users   3.0K  2 21 13:29 install
+➜  2020-02-13-raspbian-buster.zip sudo ./install  2020-02-13-raspbian-buster.img
+Password:
+Sorry, try again.
+Password:
+
+__________.___  .___                 __         .__  .__                
+\______   \   | |   | ____   _______/  |______  |  | |  |   ___________ 
+ |     ___/   | |   |/    \ /  ___/\   __\__  \ |  | |  | _/ __ \_  __ \
+ |    |   |   | |   |   |  \___ \  |  |  / __ \|  |_|  |_\  ___/|  | \/
+ |____|   |___| |___|___|  /____  > |__| (____  /____/____/\___  >__|   
+                         \/     \/            \/               \/       
+
+------------------------------------------------------------------------------------
+   Filesystem      Size   Used  Avail Capacity iused               ifree %iused  Mounted on
+------------------------------------------------------------------------------------
+1) /dev/disk1s1   234Gi  216Gi  9.9Gi    96% 3536725 9223372036851239082    0%   /
+2) devfs          199Ki  199Ki    0Bi   100%     689                   0  100%   /dev
+3) /dev/disk1s4   234Gi  6.0Gi  9.9Gi    38%       6 9223372036854775801    0%   /private/var/vm
+4) map -hosts       0Bi    0Bi    0Bi   100%       0                   0  100%   /net
+5) map auto_home    0Bi    0Bi    0Bi   100%       0                   0  100%   /home
+6) map -fstab       0Bi    0Bi    0Bi   100%       0                   0  100%   /Network/Servers
+7) /dev/disk3s1    30Gi  2.4Mi   30Gi     1%       0                   0  100%   /Volumes/UNTITLED
+------------------------------------------------------------------------------------
+
+Select the disk to use by enetering the disk number.
+*** MAKE SURE YOU SELECT THE CORRECT DISK ***
+*** Refer to the Readme if uncertain ***
+
+Use disk [ 1, 2, 3, 4, 5, 6, 7 ] #7
+Unmounting Disk
+Volume UNTITLED on disk3s1 unmounted
+Writing image
+Ctrl+T to see progress..
+3612+0 records in
+3612+0 records out
+3787456512 bytes transferred in 111.627002 secs (33929573 bytes/sec)
+Ejecting Disk
+Disk /dev/rdisk3 ejected
+All Done!
+
+安装完之后如果是无显示器，usb启动的话，请执行 1.3内容
+```
+
+![-w710](/assets/img//15822653281325.jpg)
+
 ## 1.3 usb/以太网方式链接电脑 （mac os）
 ```
+run script: https://github.com/raspberrypitools/usb_ethernet
 修改两个配置文件
 #1. /Volumes/boot/config.txt 在文件末尾添加一行 dtoverlay=dwc2
 #2. /Volumes/boot/cmdline.txt  rootwait，在后面插入 modules-load=dwc2,g_ether
-#3. 在根目录创建一个名为 ssh 的目录
+#3. 在根目录创建一个名为 ssh 文件
+touch /Volumes/boot/ssh
 ```
 ![](/assets/img//15528879451986.jpg)
 
@@ -354,8 +411,29 @@ vncserver
 ```
 
 ![-w928](/assets/img//15822110460885.jpg)
+## 1.10 apt-get 国内源
 
 
+```
+对于使用buster的树莓派系统：
+    
+1、打开文件
+    
+sudo vi /etc/apt/sources.list
+    
+2、编辑文件
+将原来的deb.......和deb-src......两行注释掉，或者直接在这两行修改。
+    
+deb http://mirrors.aliyun.com/raspbian/raspbian/ buster main contrib non-free rpi
+deb-src http://mirrors.aliyun.com/raspbian/raspbian/ buster main contrib non-free rpi
+
+3、dns修改 
+ sudo vi /etc/resolv.conf
+ nameserver 114.114.114.114
+
+4、执行更新软件源    
+sudo apt-get update
+```
 # 2 
 ## 2.1 type-c
 ![](/assets/img//15531467412721.jpg)
