--- a/_posts/物联网/树莓派/2019-03-18-树莓派.md
+++ b/_posts/物联网/树莓派/2019-03-18-树莓派.md
@@ -267,6 +267,19 @@ PING baidu.com (123.125.115.110) 56(84) bytes of data.
 64 bytes from 123.125.115.110 (123.125.115.110): icmp_seq=2 ttl=51 time=8.41 ms
 64 bytes from 123.125.115.110 (123.125.115.110): icmp_seq=3 ttl=51 time=8.37 ms
 ```
+### 1.4.1 networkmanager连接wifi
+
+```
+sudo apt-get install network-manager
+#查看网络设备
+sudo nmcli dev
+#开启wifi
+sudo nmcli r wifi on
+#扫描附近wifi热点
+sudo nmcli dev wifi
+#链接到指定wifi
+sudo nmcli dev wifi connect "SSID" password "PASSWORD"
+```
 ## 1.5 修改时区
 
 ```
@@ -433,6 +446,28 @@ deb-src http://mirrors.aliyun.com/raspbian/raspbian/ buster main contrib non-fre
 
 4、执行更新软件源    
 sudo apt-get update
+```
+
+##  1.11 挂载移动硬盘
+
+
+```
+sudo fdisk -l
+sudo mkdir /data
+sudo mount /dev/sda2 /data/
+```
+
+![-w566](/assets/img//15822728002191.jpg)
+
+
+```
+【ERROR】
+ /data touch a
+touch: cannot touch 'a': Read-only file system
+
+【解决方法】
+默认不支持hfs格式，这个格式是mac os下面的格式.
+sudo mount -t hfsplus -o force,rw /dev/sda2 /data
 ```
 # 2 
 ## 2.1 type-c
