--- a/_posts/运维/linux/2019-03-05-Linux-磁盘.md
+++ b/_posts/运维/linux/2019-03-05-Linux-磁盘.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-category: 后端
+category: 运维
 ---
 # 1 概述
 
@@ -153,3 +153,89 @@ fio -name iops -rw=randwrite -bs=4k -runtime=60 -iodepth 32 -size=50G -filename 
 | --- | --- | --- |
 | 读iops | 3109/3110/3110 | 134/134/134 |
 | 写iops | 3110/3110/3110 | 134/134/134 |
+
+# 3 LVM
+LVM 是一种可用在 Linux 内核的逻辑分卷管理器
+
+lvm 逻辑卷
+
+- pv 物理卷
+
+```
+pvcreate /dev/sd[b,c]
+pvdisplay
+```
+
+- vg 卷组
+
+
+```
+vgcreate vg0 /dev/sd[b,c]
+vgdisplay
+
+vgchange -aay --sysinit     # 激活所有 vg 卷组
+vgchange -ay vg_name        # 激活指定 vg 卷组
+```
+
+- lv 逻辑卷
+
+
+```
+lvcreate -L 30G -n data vg0
+lvdisplay
+```
+
+- 容量扩展
+
+
+```
+## 新增一块磁盘 /dev/sdf 20G
+pvcreate /dev/sdf
+vgextend vg0 /dev/sdf
+lvextend -L +20476M /dev/vg0/data
+
+## ext4 ##
+resize2fs /dev/vg0/data
+
+## xfs ##
+xfs_growfs /dev/vg0/data
+
+df -hT  # 查看是否已经扩展成功
+```
+
+- 容量缩小
+
+
+```
+umount /dev/vg0/data
+
+e2fsck -f /dev/vg0/data
+resize2fs /dev/vg0/data 20G
+lvreduce -L 20G /dev/vg0/data
+
+mount /dev/vg0/data /mnt
+
+df -hT  # 查看是否已经缩小成功；注：xfs 暂不支持缩小文件系统！
+```
+
+# 4 raid 磁盘阵列
+
+
+```
+# raid5
+
+## 创建
+mdadm -C /dev/md5 -l5 -n3 /dev/sd[b,c,d] -x1 /dev/sde
+
+## 状态
+mdadm -D /dev/md0
+
+## 停止
+mdadm -S /dev/md0
+mdadm --zero-superblock /dev/sd[b,c,d,e]
+
+## 替换问题设备 raid5
+mdadm /dev/md5 -f /dev/sdc  # 标记问题设备
+mdadm /dev/md5 -r /dev/sdc  # 移除问题设备
+mdadm /dev/md5 -a /dev/sdf  # 添加新设备
+```
