--- a/_posts/大数据/2019-03-20-oozie.md
+++ b/_posts/大数据/2019-03-20-oozie.md
@@ -9,6 +9,10 @@ category: 大数据
 ## 2.1 oozie share lib update
 
 ```
+
+
+hadoop fs -mkdir /user/oozie/share/lib/lib_20161202183044/spark2
+hadoop fs -put /data/cloudera/parcels/SPARK2/lib/spark2/jars/*  /user/oozie/share/lib/lib_20161202183044/spark2
 [bokun.wang]$ oozie admin -sharelibupdate -oozie http://xxx:11000/oozie
 
 [ShareLib update status]
@@ -51,6 +55,21 @@ hadoop fs -chown -R  oozie:oozie  /user/oozie/share/lib/lib_20190320212412/spark
 
 #然后执行2.1中的share lib update command 或者 restart oozie
 ```
+## 2.3 oozie web console ext 2.2
+
+```
+wget http://archive.cloudera.com/gplextras/misc/ext-2.2.zip
+
+creates=/var/lib/oozie/ext-2.2 unzip ./ext-2.2.zip -d /var/lib/oozie/
+chown oozie:oozie -R /var/lib/oozie/ext-2.2
+
+ll /data/cloudera/parcels/CDH/lib/oozie/
+
+lrwxrwxrwx 1 root root    14 Aug 10  2018 libext -> /var/lib/oozie
+
+Done.
+``` 
+
 ##Q&&A
 ### 1  ClassNotFoundException: Class org.apache.oozie.action.hadoop.SparkMain
 
