--- a/_posts/物联网/树莓派/2020-02-25-树莓派4.md
+++ b/_posts/物联网/树莓派/2020-02-25-树莓派4.md
@@ -94,3 +94,81 @@ sudo gpio readall
 
 
 ![-w716](/assets/img//15835541110517.jpg)
+
+# 2 sensor
+## 2.1 超声波
+
+![-w583](/assets/img//15910198272693.jpg)
+
+- 接线方法
+
+
+```
+VCC[2] 电源正极,连接5V针脚
+GND[6] 电源负极,连接任意板上任意GND针脚
+Trig[11] 引脚用来接收树莓派的控制信号。接任意 GPIO 口。
+Echo[12] 引脚用来向树莓派返回测距信息。接任意 GPIO 口。
+#py code
+import RPi.GPIO as gpio
+import time
+import numpy as np
+
+def get_distance(setmode=gpio.BOARD,TRIG=35,ECHO=37,max_wait_time=5):
+   '''
+   calculate the distance between the obstacle and ultrasonic sensor (US-015)
+   :param setmode: could be GPIO.BOARD or GPIO.BCM
+   :param TRIG: trigger pin number for raspberry pie
+   :param ECHO: echo pin number for raspberry pie
+   :param max_wait_time: max wait time for receiving the signal
+   :return:
+   '''
+   gpio.setmode(setmode)
+
+   gpio.setup(TRIG, gpio.OUT)
+   gpio.setup(ECHO, gpio.IN)
+   gpio.output(TRIG,True)
+   time.sleep(0.001)
+   gpio.output(TRIG,False)
+   wait_start = time.time()
+   try:
+      while gpio.input(ECHO) == False:
+        ## exit if the wait is longer than max_wait_time
+        if time.time()> wait_start + max_wait_time:
+            return np.nan
+        else:
+            pass
+      start = time.time()
+      while gpio.input(ECHO) == True:
+        end = time.time()
+
+      ##clear the channel
+      gpio.cleanup()
+
+      sig_time = end - start
+      # cm:
+      distance = sig_time / 0.000058
+      return distance
+
+   except:
+
+       gpio.cleanup()
+       return np.nan
+
+
+
+if __name__ == "__main__":
+    TRIG = 38
+    ECHO = 36
+    setmode=gpio.BOARD
+    #for i in range(20):
+    while True:
+        start = time.time()
+        dist=get_distance(setmode,TRIG=TRIG,ECHO=ECHO)
+        print("disitance: {} CM".format(dist))
+        end = time.time()
+        #print(end-start)
+        time.sleep(1)
+```
+
+![-w283](/assets/img//15910223987912.jpg)
+
