--- a/_posts/运维/linux/2019-01-04-Linux.md
+++ b/_posts/运维/linux/2019-01-04-Linux.md
@@ -204,9 +204,20 @@ git push --delete origin tag v1.0   # 删除远程tag
 git checkout -b dev v1.0    # 检出tag v1.0到新分支dev
 git checkout v1.0           # 检出tag v1.0到工作区,但是不能修改,若要修改请用上面的方式
 ```
+- git将master分支代码合并到自己的分支
 
-git恢复操作详解
-![](//assets/img//15889226630826.jpg)
+
+```
+git checkout master
+git pull
+git checkout bokun.wang
+git merge master
+git push origin  bokun.wang
+```
+
+- git恢复操作详解
+
+![](/assets/img//15889226630826.jpg)
 
 
 ```
@@ -803,7 +814,14 @@ mysql                    x  990   990   MariaDB                  /var/lib/mysql 
 ```
 ## 1.17 sed 
 ## 1.18 awk
- 
+## 1.19 iftop
+  
+```
+#过滤网段流量
+iftop -F x.x.x.x/掩码
+```
+  
+  
 # 2 内核参数
 
 ```
