update oozie share lib

--- a/_posts/大数据/2019-03-20-oozie.md
+++ b/_posts/大数据/2019-03-20-oozie.md
@@ -13,6 +13,10 @@ category: 大数据
 
 hadoop fs -mkdir /user/oozie/share/lib/lib_20161202183044/spark2
 hadoop fs -put /data/cloudera/parcels/SPARK2/lib/spark2/jars/*  /user/oozie/share/lib/lib_20161202183044/spark2
+#少了这个步骤，汇报spark class not find
+hadoop fs -cp hdfs://swc-cdh/user/oozie/share/lib/lib_20200610220322/spark/oozie-sharelib-spark-4.1.0-cdh5.15.1.jar hdfs://swc-cdh/user/oozie/share/lib/lib_20200610220322/spark2/
+
+
 [bokun.wang]$ oozie admin -sharelibupdate -oozie http://xxx:11000/oozie
 
 [ShareLib update status]
@@ -77,4 +81,7 @@ Done.
 ```
 要让一个workflow使用ShareLib，只需要在job.properties里面加入oozie.use.system.libpath=true就行啦~
 前提是oozie share lib中有对一个的版本目录，如果没有需要加一下哦，比如我上面的spark2，虽然是同样的错，但是实际上是jar包不存在，首先保证有jar在设置这个配置
+
+#加上这一步
+hadoop fs -cp hdfs://swc-cdh/user/oozie/share/lib/lib_20200610220322/spark/oozie-sharelib-spark-4.1.0-cdh5.15.1.jar hdfs://swc-cdh/user/oozie/share/lib/lib_20200610220322/spark2/
 ```
