--- a/_posts/运维/etcd/2020-06-08-etcd.md
+++ b/_posts/运维/etcd/2020-06-08-etcd.md
@@ -156,4 +156,8 @@ PORT="9000"
 ./etcdkeeper -h $HOST -p $PORT -auth=true &> /dev/null&
 
 sh start.sh
+打开网页: http://x.x.x.x:9000/etcdkeeper/
+输入用户名密码
 ```
+
+![-w361](/assets/img//15917178118560.jpg)
