--- a/_posts/大数据/2019-03-20-oozie.md
+++ b/_posts/大数据/2019-03-20-oozie.md
@@ -16,6 +16,11 @@ hadoop fs -put /data/cloudera/parcels/SPARK2/lib/spark2/jars/*  /user/oozie/shar
 #少了这个步骤，汇报spark class not find
 hadoop fs -cp hdfs://swc-cdh/user/oozie/share/lib/lib_20200610220322/spark/oozie-sharelib-spark-4.1.0-cdh5.15.1.jar hdfs://swc-cdh/user/oozie/share/lib/lib_20200610220322/spark2/
 
+ hadoop fs -put /etc/spark/conf/spark-defaults.conf /user/oozie/share/lib/lib_20200610220322/spark2
+ hadoop fs -put /etc/hive/conf/hive-site.xml /user/oozie/share/lib/lib_20200610220322/spark2
+ 
+ 
+ hadoop fs -chown oozie:oozie /user/oozie/share/lib/lib_20200610220322/spark2/*
 
 [bokun.wang]$ oozie admin -sharelibupdate -oozie http://xxx:11000/oozie
 
