--- a/_posts/大数据/2019-08-29-配置优化System.md
+++ b/_posts/大数据/2019-08-29-配置优化System.md
@@ -73,6 +73,12 @@ fi
 if test -f /sys/kernel/mm/transparent_hugepage/defrag; then
 echo never > /sys/kernel/mm/transparent_hugepage/defrag
 fi
+
+
+[root@xxx ~]#  cat /sys/kernel/mm/transparent_hugepage/enabled
+always madvise [never]
+[root@xxx ~]# cat /sys/kernel/mm/transparent_hugepage/defrag
+always madvise [never]
 ```
 
 ## 2.7 系统预留空间
