--- a/_posts/运维/linux/2019-01-04-Linux.md
+++ b/_posts/运维/linux/2019-01-04-Linux.md
@@ -820,7 +820,79 @@ mysql                    x  990   990   MariaDB                  /var/lib/mysql 
 #过滤网段流量
 iftop -F x.x.x.x/掩码
 ```
+## 1.20 alternatives
+
+
+```
+usage: alternatives --install <link> <name> <path> <priority>
+                    [--initscript <service>]
+                    [--family <family>]
+                    [--slave <link> <name> <path>]*
+       alternatives --remove <name> <path>
+       alternatives --auto <name>
+       alternatives --config <name>
+       alternatives --display <name>
+       alternatives --set <name> <path>
+       alternatives --list
+       
+# 切换spark版本       
+update-alternatives --config spark2.4.6-shell
+There are 3 programs which provide 'spark2.4.6-shell'.
+
+  Selection    Command
+-----------------------------------------------
+*  1           /usr/bin/spark2.4.6-shell
+ + 2           /data/cloudera/parcels/spark2.4.6/bin/spark-shell
+   3           /data/cloudera/parcels/spark2.4.6/bin/spark2.4.6-shell
+Enter to keep the current selection[+], or type selection number: 2
+
+#删除
+alternatives --remove spark2.4.6-shell  /usr/bin/spark2.4.6-shell
+```
+
+## 1.21 update-alternatives 
+
+
+```
+用法：update-alternatives [<选项> ...] <命令>
+
+命令：
+  --install <链接> <名称> <路径> <优先级>
+    [--slave <链接> <名称> <路径>] ...
+                           在系统中加入一组候选项。
+  --remove <名称> <路径>   从 <名称> 替换组中去除 <路径> 项。
+  --remove-all <名称>      从替换系统中删除 <名称> 替换组。
+  --auto <名称>            将 <名称> 的主链接切换到自动模式。
+  --display <名称>         显示关于 <名称> 替换组的信息。
+  --query <名称>           机器可读版的 --display <名称>.
+  --list <名称>            列出 <名称> 替换组中所有的可用候选项。
+  --get-selections         列出主要候选项名称以及它们的状态。
+  --set-selections         从标准输入中读入候选项的状态。
+  --config <名称>          列出 <名称> 替换组中的可选项，并就使用其中
+                           哪一个，征询用户的意见。
+  --set <名称> <路径>      将 <路径> 设置为 <名称> 的候选项。
+  --all                    对所有可选项一一调用 --config 命令。
+
+<链接>  是指向 /etc/alternatives/<名称> 的符号链接。 (如 /usr/bin/pager)
+<名称>  是该链接替换组的主控名。(如 pager)
+<路径>  是候选项目标文件的位置。（程序的实际路径）(如 /usr/bin/less)
+<优先级>  是一个整数，在自动模式下，这个数字越高的选项，其优先级也就越高。
+
+选项：
+  --altdir <目录>          改变候选项目录。
+  --admindir <目录>        设置 statoverride 文件的目录。
+  --log <文件>             改变日志文件。
+  --force                  就算没有通过自检，也强制执行操作。
+  --skip-auto              在自动模式中跳过设置正确候选项的提示
+                           (只与 --config 有关)
+  --verbose                启用详细输出。
+  --quiet                  安静模式，输出尽可能少的信息。不显示输出信息。
+  --help                   显示本帮助信息。
+  --version                显示版本信息。
   
+ 例子: 
+update-alternatives --install /usr/bin/spark2.4.6-shell spark2.4.6-shell /data/cloudera/parcels/spark2.4.6/bin/spark2.4.6-shell 11
+``` 
   
 # 2 内核参数
 
