udpate spark3 config

--- a/_posts/运维/linux/2019-01-04-Linux.md
+++ b/_posts/运维/linux/2019-01-04-Linux.md
@@ -247,6 +247,27 @@ git reset --hard HEAD~2 file
 git reset --hard Commit_ID
 git reset --hard Commit_ID file
 ```
+
+- git Q&&A
+
+
+```
+枚举对象: 25, 完成.
+对象计数中: 100% (25/25), 完成.
+使用 8 个线程进行压缩
+压缩对象中: 100% (12/12), 完成.
+写入对象中: 100% (13/13), 1.33 KiB | 679.00 KiB/s, 完成.
+总共 13 （差异 8），复用 0 （差异 0）
+remote: xxxx, xxx, refs/heads/bokunwang_105
+remote: Please merge origin/master before push to remote!
+To git.xxx.com:xxx/xxx.git
+ ! [remote rejected] bokunwang_105 -> bokunwang_105 (pre-receive hook declined)
+error: 推送一些引用到 'git@xxxx.git' 失败
+
+【解决办法】
+ git merge origin/master  
+ git add /commit/push
+```
 ## 1.3  alias
 
 ```
